--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My Compose App</string>
+    <string name="title_activity_compose_article">ComposeArticleActivity</string>
 </resources>
