--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,16 @@
     <string name="third_description">A layout composable that places its children in a horizontal sequence.</string>
     <string name="fourth_title">Column composable</string>
     <string name="fourth_description">A layout composable that places its children in a vertical sequence.</string>
+    <string name="title_activity_dice_roller">DiceRollerActivity</string>
+
+    <string name="roll">Roll</string>
+    <string name="title_activity_lemonade">LemonadeActivity</string>
+    <string name="lemon_select">Tap the lemon tree to select a lemon</string>
+    <string name="lemon_tree_content_description">Lemon tree</string>
+    <string name="lemon_squeeze">Keep tapping the lemon to squeeze it</string>
+    <string name="lemon_squeeze_content_description">Lemon Squeeze</string>
+    <string name="lemon_drink">Tap the lemonade to drink it</string>
+    <string name="lemon_drink_content_description">Glass of lemonade</string>
+    <string name="lemon_empty">Tap the empty glass to start again</string>
+    <string name="lemon_restart_content_description">Empty glass</string>
 </resources>
