Added 30 Days of Wellness app
This commit introduces the "30 Days of Wellness" app.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,4 +111,70 @@
     <string name="description5">Effortlessly glides in to save the day</string>
     <string name="hero6">Dynamic Yasmine</string>
     <string name="description6">Ability to shift to any form and energize</string>
+
+    <!--    30 Days of Wellness App -->
+    <string name="wellness_day_app_name">30 Days of Wellness</string>
+
+    <string name="day1_title">Mindful Morning</string>
+    <string name="day1_description">Start your day with 5 minutes of mindful breathing. Focus on your breath and nothing else.</string>
+    <string name="day2_title">Hydration Boost</string>
+    <string name="day2_description">Drink a large glass of water immediately after waking up to kickstart your metabolism.</string>
+    <string name="day3_title">Stretch &amp; Move</string>
+    <string name="day3_description">Engage in 10 minutes of gentle stretching. Focus on your major muscle groups.</string>
+    <string name="day4_title">Healthy Breakfast</string>
+    <string name="day4_description">Prepare a nutritious breakfast. Include protein, fiber, and healthy fats.</string>
+    <string name="day5_title">Digital Detox</string>
+    <string name="day5_description">Take a 1-hour break from all screens. Read a book, go for a walk, or meditate.</string>
+    <string name="day6_title">Express Gratitude</string>
+    <string name="day6_description">Write down three things you are grateful for today. Focus on the positive aspects of your life.</string>
+    <string name="day7_title">Outdoor Time</string>
+    <string name="day7_description">Spend at least 15 minutes outdoors today. Connect with nature and get some fresh air.</string>
+    <string name="day8_title">Active Listening</string>
+    <string name="day8_description">Practice active listening in one conversation today. Give your full attention to the speaker.</string>
+    <string name="day9_title">Learn Something New</string>
+    <string name="day9_description">Dedicate 30 minutes to learning something new, whether it\'s a language, skill, or topic of interest.</string>
+    <string name="day10_title">Healthy Snack Prep</string>
+    <string name="day10_description">Prepare healthy snacks for the week ahead to avoid unhealthy choices when hungry.</string>
+    <string name="day11_title">Declutter a Space</string>
+    <string name="day11_description">Choose one small area in your home and declutter it for 15 minutes. A tidy space can lead to a tidy mind.</string>
+    <string name="day12_title">Mindful Eating</string>
+    <string name="day12_description">Eat one meal mindfully today. Savor each bite, paying attention to flavors and textures.</string>
+    <string name="day13_title">Connect with a Loved One</string>
+    <string name="day13_description">Reach out to a friend or family member you haven\'t spoken to in a while. A quick call or text can make a difference.</string>
+    <string name="day14_title">Review Your Goals</string>
+    <string name="day14_description">Take 10 minutes to review your personal goals. Are you on track? What adjustments can you make?</string>
+    <string name="day15_title">Light Cardio</string>
+    <string name="day15_description">Engage in 20 minutes of light cardio, such as brisk walking, cycling, or dancing.</string>
+    <string name="day16_title">Journal Your Thoughts</string>
+    <string name="day16_description">Spend 15 minutes journaling. Write down your thoughts, feelings, or anything on your mind.</string>
+    <string name="day17_title">Plan Your Week</string>
+    <string name="day17_description">Dedicate time to plan your week ahead. Organize your tasks, appointments, and self-care activities.</string>
+    <string name="day18_title">Try a New Recipe</string>
+    <string name="day18_description">Cook a new, healthy recipe today. Expand your culinary horizons and enjoy nutritious food.</string>
+    <string name="day19_title">Digital Sunset</string>
+    <string name="day19_description">Put away all screens 1 hour before bedtime. Allow your mind to wind down naturally.</string>
+    <string name="day20_title">Practice Forgiveness</string>
+    <string name="day20_description">Practice forgiving someone, or yourself, for something small. Let go of resentment.</string>
+    <string name="day21_title">Nature Walk</string>
+    <string name="day21_description">Go for a walk in a park or natural setting. Observe your surroundings and breathe deeply.</string>
+    <string name="day22_title">Positive Affirmations</string>
+    <string name="day22_description">Repeat three positive affirmations to yourself throughout the day. "I am capable," "I am strong," etc.</string>
+    <string name="day23_title">Prioritize Sleep</string>
+    <string name="day23_description">Aim for 7-9 hours of quality sleep tonight. Create a relaxing bedtime routine.</string>
+    <string name="day24_title">Limit Processed Foods</string>
+    <string name="day24_description">Make a conscious effort to reduce or eliminate processed foods from your diet today.</string>
+    <string name="day25_title">Meditation Session</string>
+    <string name="day25_description">Try a guided meditation for 10-15 minutes. Many apps and videos are available.</string>
+    <string name="day26_title">Random Act of Kindness</string>
+    <string name="day26_description">Perform a small, random act of kindness for someone else today. Pay it forward.</string>
+    <string name="day27_title">Set Boundaries</string>
+    <string name="day27_description">Identify one area where you need to set a boundary (e.g., work, social media) and commit to it.</string>
+    <string name="day28_title">Review Progress</string>
+    <string name="day28_description">Look back at your wellness journey so far. Acknowledge your progress and learn from challenges.</string>
+    <string name="day29_title">Future Self Letter</string>
+    <string name="day29_description">Write a letter to your future self, outlining your hopes, dreams, and wellness goals.</string>
+    <string name="day30_title">Celebrate &amp; Reflect</string>
+    <string name="day30_description">Celebrate completing 30 days of wellness! Reflect on what you\'ve learned and plan next steps.</string>
+    <string name="title_activity_wellness_day">WellnessDayActivity</string>
+
 </resources>
