Added tests for Cupcake app and initialize Lunch Tray app
This commit adds UI tests for the Cupcake application, covering screen navigation and content verification. This includes:
- Navigation tests for all screens in the Cupcake app.
- Tests for verifying the content of StartOrderScreen, SelectOptionScreen, and OrderSummaryScreen.
- Helper extension functions for Compose testing.

The Cupcake app's launcher icon has been updated, and it is now set as the default launch activity. The navigation library version has also been updated.

Additionally, the initial structure for the Lunch Tray application, including its main activity, themes, and basic configuration files.

--- a/cupcake/src/main/res/values/strings.xml
+++ b/cupcake/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Cupcake</string>
+    <string name="app_name_cupcake">Cupcake</string>
     <string name="title_activity_cupcake">CupcakeActivity</string>
     <string name="order_cupcakes">Order Cupcakes</string>
     <string name="one_cupcake">One Cupcake</string>
