--- a/lunchtray/src/main/res/values/strings.xml
+++ b/lunchtray/src/main/res/values/strings.xml
@@ -1,4 +1,17 @@
 <resources>
+    <string name="app_name_lunch_tray">Lunch Tray</string>
     <string name="title_activity_lunch_tray">LunchTrayActivity</string>
-    <string name="title_activity_launch_tray">LaunchTrayActivity</string>
+    <string name="back_button">Back</string>
+    <string name="cancel">Cancel</string>
+    <string name="choose_accompaniment">Choose Accompaniment</string>
+    <string name="choose_entree">Choose Entree</string>
+    <string name="choose_side_dish">Choose Side Dish</string>
+    <string name="next">Next</string>
+    <string name="order_checkout">Order Checkout</string>
+    <string name="start_order">Start Order</string>
+    <string name="order_summary">Order Summary</string>
+    <string name="subtotal">Subtotal: %s</string>
+    <string name="tax">Tax: %s</string>
+    <string name="total">Total: %s</string>
+    <string name="submit">Submit</string>
 </resources>
