Implement Navigation for MyCity app
This commit introduces navigation functionality to the MyCity app, allowing users to move between different screens.

Key changes:
- Added `CityViewModel.kt` to manage UI state using `MutableStateFlow` and `StateFlow`.
- Created `CityUiState.kt` data class to hold the state for categories, recommendations, place details, and current selections.
- Implemented `MyCityApp.kt` which sets up the `NavHost` for navigation between `CategoryScreen`, `RecommendationScreen`, and `PlaceDetailsScreen`.
- Introduced `MyCityAppScreen` enum to define screen routes and titles.
- Added `MyCityAppBar` composable to display the current screen title and a back button when applicable.
- Created `RecommendationScreen.kt` to display a list of recommendations as clickable cards.
- Created `PlaceDetailsScreen.kt` to display details of a selected place, including an image and description.
- Updated `CategoryScreen.kt` to use `LazyColumn` for displaying categories and improved item layout.
- Added necessary string resources for screen titles and the back button.
- Included dependencies for navigation (`androidx.navigation.compose`), ViewModel (`androidx.lifecycle.viewmodel.compose`), icons (`androidx.material.icons.extended`), and image loading (`coil-compose`, `coil-network-okhttp`).
- Added a placeholder image `my_city.jpg` for use in UI previews and initial layouts.
- Minor updates to Gradle configuration and project settings files.

--- a/mycity/src/main/res/values/strings.xml
+++ b/mycity/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MyCity</string>
+    <string name="back_button">Back</string>
+    <string name="category">Category</string>
+    <string name="recommendation">Recommendation</string>
+    <string name="place_details">PlaceDetails</string>
 </resources>
